--- a/week 2/wwr/site-plan-rafting.html
+++ b/week 2/wwr/site-plan-rafting.html
@@ -11,9 +11,9 @@
 
 <body>
   <header>
-    <h1>[White Water Rafting] Site Plan</h1>
-    <h2>[Brooke Noftle]</h2>
-    <h2>WDD 130-[Section 6]</h2>
+    <h1>White Water Rafting Site Plan</h1>
+    <h2>Brooke Noftle</h2>
+    <h2>WDD 130 - Section 6</h2>
     <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
   </header>
   <main>
@@ -67,7 +67,7 @@
       <!-- change this -->
     </h4>
     <h4>
-      Paragraph Font: Roboto Flex
+      Paragraph Font: Nunito Sans
       <!-- change this -->
     </h4>
     <h3>Normal paragraph example</h3>
