--- a/wwr/index.html
+++ b/wwr/index.html
@@ -10,7 +10,7 @@
     <div id="content">
         <header>
             <a id="logo_link" href="index.html">
-                <img class="logo" src='images/rafting_logo.jpg' alt='Rapid Descent Logo'>
+                <img class="logo" src='images/logo.jpg' alt='Rapid Descent Logo'>
             </a>
             
             <nav>
@@ -65,7 +65,7 @@
                     <img src="images/facebook.png" alt="fb icon">
                 </a>
                 <a href="https://twitter.com" target="_blank">
-                    <img class="x" src="images/x.jpg" alt="x icon">
+                    <img class="x" src="images/X.jpg" alt="x icon">
                 </a>
                 <a href="https://instagram.com" target="_blank">
                     <img src="images/instagram.png" alt="insta icon">
