--- a/wwr/faq.html
+++ b/wwr/faq.html
@@ -20,16 +20,28 @@
                 <a href="contactus.html">Contact Us</a>
             </nav>
         </header>
-    
-        <div id="faq">
+     <div id="hero">
+            <div id="hero-box">
+                <img id="hero-img" src="images/faq2.jpg" alt="People enjoying rafting">
+            </div>
+            <section id="hero-msg">
+                <h1 class="home-title">Have An Adventure</h1>
+                <h4>Make Memories with Rapid Descent</h4>
+                <div class='button-box'>
+                    <a class='book' href="contactus.html">Book Now</a>
+                </div>
+            </section>
+        </div>
+        <!-- <div id="faq">
             <div id="faq-box">
                 <img id="faq-img" src="images/faq2.jpg" alt="rafting banner">
             </div>
-            <section id="faq-msg">
+
+        </div> -->
+        <main>
+                        <section id="faq-msg">
                 <h1 class="faq-title">FAQ</h1>
             </section>
-        </div>
-        <main>
             <div class="faq-container">
                 <details>
                     <summary>Is this a good trip for kids? What are the age ranges you allow?</summary>
