--- a/travel/home-travel.html
+++ b/travel/home-travel.html
@@ -29,7 +29,7 @@
                 <h2>Japan</h2>
             </section>
             <section class="euro-card">
-                <img class="euro-img" src="images/home/lavender-field.jpg" alt="lavender field">
+                <img class="euro-img" src="images/home/garden-view.jpg" alt="garden vi">
                 <h2>Europe</h2>
             </section>
             <section class="africa-card" >
@@ -37,11 +37,11 @@
                 <h2>Africa</h2>
             </section>
         </main>
-         <footer>
+        <footer>
             <p>From Lost to Found &copy; 2025 - Brooke Noftle</p>
-            <p><a href='travel_siteplan.html'>Site Plan</a></p>
             <p><a href="euro-jap-travel.html">Beauty in Nature</a></p>
             <p><a href="africa-travel.html">Love & Gratitude</a></p>
+            <p><a href='travel_siteplan.html'>Site Plan</a></p>
             <div class="social">
                 <a href="https://facebook.com" target="_blank">
                     <img src="images/facebook.png" alt="fb icon">
