--- a/travel/home-travel.html
+++ b/travel/home-travel.html
@@ -9,8 +9,8 @@
 <body>
     <div class="content">
         <header>
-            <a id="logo link" href="home-travel.html">
-                <img class="logo" src="images/from_lost_to_found.png">
+            <a id="logo-link" href="home-travel.html">
+                <img class="logo" src="images/from_lost_to_found.png" alt="logo img">
             </a>
 
             <nav>
@@ -25,15 +25,15 @@
         </div>
         <main class="home-grid">
             <section class="japan-card">
-                <img class="japan-img" src="images/home/temple.jpg" alt="japanese temple">
+                <img class="card-img" src="images/home/temple.jpg" alt="japanese temple">
                 <h2>Japan</h2>
             </section>
             <section class="euro-card">
-                <img class="euro-img" src="images/home/garden-view.jpg" alt="garden vi">
+                <img class="card-img" src="images/home/garden-view.jpg" alt="garden vi">
                 <h2>Europe</h2>
             </section>
             <section class="africa-card" >
-                <img class="africa-img" src="images/home/lindiwe-and-latoya.jpg" alt="two little girls">
+                <img class="card-img" src="images/home/lindiwe-and-latoya.jpg" alt="two little girls">
                 <h2>Africa</h2>
             </section>
         </main>
