--- a/travel/euro-jap-travel.html
+++ b/travel/euro-jap-travel.html
@@ -9,8 +9,8 @@
 <body>
     <div class="content">
         <header>
-            <a id="logo link" href="home-travel.html">
-                <img class="logo" src="images/from_lost_to_found.png">
+            <a id="logo-link" href="home-travel.html">
+                <img class="logo" src="images/from_lost_to_found.png" alt="logo img">
             </a>
 
             <nav>
