read more/read less

--- a/travel/africa-travel.html
+++ b/travel/africa-travel.html
@@ -17,6 +17,9 @@
                 <a href="home-travel.html">Home</a>
                 <a href="euro-jap-travel.html">Beauty in Nature</a>
                 <a href="africa-travel.html">Love & Gratitude</a>
+                <div class='button-box'>
+                    <a class='book' href="contact.html">Learn More</a>
+                </div>
             </nav>
         </header>
         <div id="hero">
@@ -38,15 +41,27 @@
             <div id="examples-box">
                 <div class="corn">
                     <img class="corn-img" src="images/africa/shucking-corn.jpg" alt="shucking corn">
-                    <p>In Zambia, I had the opportunity to sit with a group of volunteers and help remove dried corn kernels from the cob—a hands-on part of preparing mealie meal, the flour used to make Nshima, a staple dish here. Nshima has a grainy, paste-like texture and is central to daily life and culture in Zambia. Sharing in this traditional process gave me a deeper appreciation for the care and community that go into every meal. It was more than just food preparation—it was a moment of connection, learning, and respect for local traditions.</p>
+                    <p class="original">In Zambia, I had the opportunity to sit with a group of volunteers and help remove dried corn kernels</p>
+                    <span class="dots">...</span>
+                    <p class="extra">from the cob—a hands-on part of preparing mealie meal, the flour used to make Nshima, a staple dish here. Nshima has a grainy, paste-like texture and is central to daily life and culture in Zambia. Sharing in this traditional process gave me a deeper appreciation for the care and community that go into every meal. It was more than just food preparation—it was a moment of connection, learning, and respect for local traditions.</p>
+                    <input type="checkbox" id="btn">
+                    <label for="btn"></label>
                 </div>
                 <div class="hair-braiding">
                     <img class="hair-img" src="images/africa/hair-braiding.jpg" alt="little girls braiding Anna's hair">
-                    <p>I always cherished the moments spent with the girls at the orphanages we visited. They were full of energy, laughter, and curiosity. One of their favorite things to do was play with my sister’s and my hair—they were fascinated by the color and loved braiding it. It was such a simple gesture, but it created a beautiful bond and reminded me how meaningful small moments can be.</p>
+                    <p class="original2">I always cherished the moments spent with the girls</p>
+                    <span class="dots2">...</span>
+                    <p class="extra2">at the orphanages we visited. They were full of energy, laughter, and curiosity. One of their favorite things to do was play with my sister’s and my hair—they were fascinated by the color and loved braiding it. It was such a simple gesture, but it created a beautiful bond and reminded me how meaningful small moments can be.</p>
+                    <input type="checkbox" id="btn2">
+                    <label for="btn2"></label>
                 </div>
                 <div class="washing">
                     <img class="washing-img" src="images/africa/clothes-washing-station.jpg" alt="clothes washing station">
-                    <p>This was a clothes-washing station in a rural village I visited—an open, shared space where the entire community gathered to scrub and rinse their laundry by hand. Watching women and children work together, surrounded by buckets and worn washboards, was a powerful reminder of the simple luxuries we often overlook—like running water, washing machines, and private laundry rooms. The scene was a humbling contrast to the convenience we so easily take for granted.</p>
+                    <p class="original3">This was a clothes-washing station in a rural village I visited—an open, shared </p>
+                    <span class="dots3">...</span>
+                    <p class="extra3">space where the entire community gathered to scrub and rinse their laundry by hand. Watching women and children work together, surrounded by buckets and worn washboards, was a powerful reminder of the simple luxuries we often overlook—like running water, washing machines, and private laundry rooms. The scene was a humbling contrast to the convenience we so easily take for granted.</p>
+                    <input type="checkbox" id="btn3">
+                    <label for="btn3"></label>
                 </div>
             </div>
         </main>
