--- a/travel/euro-jap-travel.html
+++ b/travel/euro-jap-travel.html
@@ -17,6 +17,9 @@
                 <a href="home-travel.html">Home</a>
                 <a href="euro-jap-travel.html">Beauty in Nature</a>
                 <a href="africa-travel.html">Love & Gratitude</a>
+                <div class='button-box'>
+                    <a class='book' href="contact.html">Learn More</a>
+                </div>
             </nav>
         </header>
         <main class="euro-grid">
