africa page changes

--- a/travel/africa-travel.html
+++ b/travel/africa-travel.html
@@ -41,9 +41,9 @@
             <div id="examples-box">
                 <div class="corn">
                     <img class="corn-img" src="images/africa/shucking-corn.jpg" alt="shucking corn">
-                    <p class="original">In Zambia, I had the opportunity to sit with a group of volunteers and help remove dried corn kernels</p>
+                    <p class="original">In Zambia, I had the opportunity to sit with a group of volunteers and help</p>
                     <span class="dots">...</span>
-                    <p class="extra">from the cob—a hands-on part of preparing mealie meal, the flour used to make Nshima, a staple dish here. Nshima has a grainy, paste-like texture and is central to daily life and culture in Zambia. Sharing in this traditional process gave me a deeper appreciation for the care and community that go into every meal. It was more than just food preparation—it was a moment of connection, learning, and respect for local traditions.</p>
+                    <p class="extra"> remove dried corn kernels from the cob—a hands-on part of preparing mealie meal, the flour used to make Nshima, a staple dish here. Nshima has a grainy, paste-like texture and is central to daily life and culture in Zambia. Sharing in this traditional process gave me a deeper appreciation for the care and community that go into every meal. It was more than just food preparation—it was a moment of connection, learning, and respect for local traditions.</p>
                     <input type="checkbox" id="btn">
                     <label for="btn"></label>
                 </div>
