--- a/travel/contact.html
+++ b/travel/contact.html
@@ -22,10 +22,15 @@
                 </div>
             </nav>
         </header>
-        <div id="intro-msg">
-        </div>
-        <main class="home-grid">
-            
+        <main class="contact">
+            <!-- Add icon library -->
+
+            <div class="card">
+                <img src="images/profile.jpg" alt="profile" style="width:100%">
+                <h1>Brooke Noftle</h1>
+                <p class="title">Student and Traveller</p>
+                <p>Brigham Young University-Idaho</p>
+            </div>
         </main>
         <footer>
             <p>From Lost to Found &copy; 2025 - Brooke Noftle</p>
