--- a/travel/euro-jap-travel.html
+++ b/travel/euro-jap-travel.html
@@ -47,15 +47,12 @@
                     
                     <p>In both Japan and Europe, I felt an undeniable connection to nature. In Japan, nature is sacred, reflected in everything from the majestic Mount Fuji to peaceful Zen gardens. Europe, with its open landscapes and preserved forests, reminded me that nature is integral to humanity’s story. Both places taught me that, whether in the quiet of a Japanese garden or the vastness of European forests, nature holds timeless beauty and wisdom, inviting us to pause and truly experience the world around us.</p>
                 </div>
-                <div class="images-wrapper">
-                    <div class="polaroid-vertical">
-                        <img src="images/euro/mountain-lake.jpg" alt="mountain">
-                         <div class="caption">Blindsee Lake in Austria</div>
-                    </div>
-                    <div class="polaroid-vertical"> 
-                        <img src="images/euro/pavillion.jpg" alt="pavillion">
-                        <div class="caption">Temple de l'Amour in France</div>
-                    </div>
+                <div class="scroll-container">
+                    <img src="images/euro/mountain-lake.jpg" alt="mountain">
+                    <img src="images/euro/pavillion.jpg" alt="pavillion">
+                    <img src="images/euro/bee-and-lavender.jpg" alt="bee-and-lavender">
+                    <img src="images/japan/waterfall.jpg" alt="waterfall">
+                    <img src="images/home/lavender-field.jpg" alt="lavender-field">
                 </div>
             </section>
         </main>
