--- a/travel/euro-jap-travel.html
+++ b/travel/euro-jap-travel.html
@@ -41,18 +41,21 @@
                 </div>
             </section>
             <section class="euro-section">
-                <div class="text-wrapper">
-                    <h2 class="euro-title">Europe: A Tapestry of Nature's Majesty</h2>
-                    <p>My travels through Europe were like stepping into a living landscape painting. From the rugged mountains of Switzerland to the sun-dappled vineyards of France, Europe’s natural beauty is as varied as it is awe-inspiring. I found that nature doesn’t just complement the cultural history; it defines it. The intersection of human history and the natural world is seamless. The way nature is woven into the architecture, whether through the gardens of Versailles or the ancient stone walls of the Irish countryside, gave me a deep sense of how intertwined life and nature are. I realized that the landscapes had shaped the stories and identities of the people who lived there for centuries. The natural beauty of Europe is not just something to be admired from afar; it’s something to be experienced, breathed in, and felt in your bones.</p>
+                <h2 class="euro-title">Europe: A Tapestry of Nature's Majesty</h2>
+                <div class="text">
+                    <p>My travels through Europe were like stepping into a living landscape painting. From the rugged mountains of Switzerland to the sun-dappled vineyards of France, Europe’s natural beauty is as varied as it is awe-inspiring. I found that nature doesn’t just complement the cultural history; it defines it. The intersection of human history and the natural world is seamless. The way nature is woven into the architecture, whether through the gardens of Versailles or the ancient stone walls of the Irish countryside, gave me a deep sense of how intertwined life and nature are. I realized that the landscapes had shaped the stories and identities of the people who lived there for centuries. </p>
                     
-                    <p>In both Japan and Europe, I felt an undeniable connection to nature. In Japan, nature is sacred, reflected in everything from the majestic Mount Fuji to peaceful Zen gardens. Europe, with its open landscapes and preserved forests, reminded me that nature is integral to humanity’s story. Both places taught me that, whether in the quiet of a Japanese garden or the vastness of European forests, nature holds timeless beauty and wisdom, inviting us to pause and truly experience the world around us.</p>
+                    <p>The natural beauty of Europe is not just something to be admired from afar; it’s something to be experienced, breathed in, and felt in your bones. In both Japan and Europe, I felt an undeniable connection to nature. In Japan, nature is sacred, reflected in everything from the majestic Mount Fuji to peaceful Zen gardens. Europe, with its open landscapes and preserved forests, reminded me that nature is integral to humanity’s story. Both places taught me that, whether in the quiet of a Japanese garden or the vastness of European forests, nature holds timeless beauty and wisdom, inviting us to pause and truly experience the world around us.</p>
                 </div>
                 <div class="scroll-container">
-                    <img src="images/euro/mountain-lake.jpg" alt="mountain">
+                    <img src="images/euro/swiss-mount.jpg" alt="swiss mountains">
                     <img src="images/euro/pavillion.jpg" alt="pavillion">
                     <img src="images/euro/bee-and-lavender.jpg" alt="bee-and-lavender">
                     <img src="images/japan/waterfall.jpg" alt="waterfall">
-                    <img src="images/home/lavender-field.jpg" alt="lavender-field">
+                    <img src="images/japan/cherry-tree.jpg" alt="cherry tree">
+                    <img src="images/euro/garden2.jpg" alt="swirly garden">
+                    <img src="images/euro/greece.JPG" alt="greece">
+                    <img src="images/euro/mountain-lake.jpg" alt="mountain">
                 </div>
             </section>
         </main>
