--- a/travel/travel_siteplan.html
+++ b/travel/travel_siteplan.html
@@ -153,6 +153,14 @@
       <img class="eur-jap-img" src="images/japan/zen-garden.jpg" alt="japanese garden">
       <img class="eur-jap-img" src="images/euro/pavillion.jpg" alt="pavillion of Versailles">
       <img class="eur-jap-img" src="images/euro/mountain-lake.jpg" alt="mountains of Switzerland">
+      <img class="eur-jap-img" src="images/euro/bee-and-lavender.jpg" alt="lavernder">
+      <img class="eur-jap-img" src="images/japan/waterfall.jpg" alt="waterfall">
+      <img class="eur-jap-img" src="images/japan/cherry-tree.jpg" alt="cherry tree">
+      <img class="eur-jap-img" src="images/euro/garden2.jpg" alt="swirly garden">
+      <img class="eur-jap-img" src="images/euro/greece.JPG" alt="greece">
+      <img class="eur-jap-img" src="images/euro/swiss-mount.jpg" alt="swiss mountains">
+
+
         
       </ul>
       <h2>Love & Gratitude</h2>
@@ -187,7 +195,7 @@
 
       <h3>Beauty in Nature</h3>
       <p>         
-        The nav was cut off but it is the exact same as the home page.
+        The nav was cut off but it is the exact same as the home page. Also the last images are a scroll gallery.
       </p>
       <img src="images/beauty-in-nature-wireframe.png" alt="page 2 wireframe">
 
