--- a/travel/africa-travel.html
+++ b/travel/africa-travel.html
@@ -69,7 +69,7 @@
             <p>From Lost to Found &copy; 2025 - Brooke Noftle</p>
             <p><a href="euro-jap-travel.html">Beauty in Nature</a></p>
             <p><a href="africa-travel.html">Love & Gratitude</a></p>
-            <p><a href='travel_siteplan.html'>Site Plan</a></p>
+            <p><a href='travel_siteplan.html' target="_blank">Site Plan</a></p>
             <div class="social">
                 <a href="https://facebook.com" target="_blank">
                     <img src="images/facebook.png" alt="fb icon">
