--- a/travel/africa-travel.html
+++ b/travel/africa-travel.html
@@ -34,34 +34,38 @@
         <main class="africa-grid">
             <div class="africa-main">
                 <p>
-                    Despite having very little and facing some extremely challenging circumstances, the people I met remained positive and cheerful. They consistently did what they could and expressed gratitude for what they had. What struck me the most was the incredible humility they embodied. These were individuals who, even in their own struggles, gave without hesitation. They shared their last piece of bread, offered a smile when their own lives were far from easy, and welcomed me into their homes with a warmth that I will never forget. Their sense of community was palpable — no one was ever truly alone. I witnessed firsthand how love, in its purest form, transcends material wealth. It’s in the quiet gestures of kindness, in the selfless acts, and in the way people lift each other up, no matter how hard life gets. In a world where we often get caught up in what we don’t have, these people showed me that the true richness of life lies in our connections with others, and in the love we share, no matter how little we may have.
-                </p>
+                    Despite having very little and facing some extremely challenging circumstances, the people I met remained positive and cheerful. They consistently did what they could and expressed gratitude for what they had. What struck me the most was the incredible humility they embodied. These were individuals who, even in their own struggles, gave without hesitation. They shared their last piece of bread, offered a smile when their own lives were far from easy, and welcomed me into their homes with a warmth that I will never forget. 
+                    Their sense of community was palpable — no one was ever truly alone. I witnessed firsthand how love, in its purest form, transcends material wealth. It’s in the quiet gestures of kindness, in the selfless acts, and in the way people lift each other up, no matter how hard life gets. In a world where we often get caught up in what we don’t have, these people showed me that the true richness of life lies in our connections with others, and in the love we share, no matter how little we may have.
+                </p> 
                 <img src="images/africa/joy.jpg" alt="jumping rope with Nancy">
             </div>
             <div id="examples-box">
-                <div class="corn">
+                <div class="corn example-box">
                     <img class="corn-img" src="images/africa/shucking-corn.jpg" alt="shucking corn">
+                    <h4>Shucking Corn</h4>
                     <p class="original">In Zambia, I had the opportunity to sit with a group of volunteers and help</p>
                     <span class="dots">...</span>
                     <p class="extra"> remove dried corn kernels from the cob—a hands-on part of preparing mealie meal, the flour used to make Nshima, a staple dish here. Nshima has a grainy, paste-like texture and is central to daily life and culture in Zambia. Sharing in this traditional process gave me a deeper appreciation for the care and community that go into every meal. It was more than just food preparation—it was a moment of connection, learning, and respect for local traditions.</p>
                     <input type="checkbox" id="btn">
-                    <label for="btn"></label>
+                    <label id="labelbtn" for="btn"></label>
                 </div>
-                <div class="hair-braiding">
+                <div class="hair-braiding example-box">
                     <img class="hair-img" src="images/africa/hair-braiding.jpg" alt="little girls braiding Anna's hair">
-                    <p class="original2">I always cherished the moments spent with the girls</p>
+                    <h4>Hair Braiding</h4>
+                    <p class="original2">I always cherished the moments spent with the girls at the orphanages we</p>
                     <span class="dots2">...</span>
-                    <p class="extra2">at the orphanages we visited. They were full of energy, laughter, and curiosity. One of their favorite things to do was play with my sister’s and my hair—they were fascinated by the color and loved braiding it. It was such a simple gesture, but it created a beautiful bond and reminded me how meaningful small moments can be.</p>
+                    <p class="extra2"> visited. They were full of energy, laughter, and curiosity. One of their favorite things to do was play with my sister’s and my hair—they were fascinated by the color and loved braiding it. It was such a simple gesture, but it created a beautiful bond and reminded me how meaningful small moments can be.</p>
                     <input type="checkbox" id="btn2">
-                    <label for="btn2"></label>
+                    <label id="labelbtn" for="btn2"></label>
                 </div>
-                <div class="washing">
+                <div class="washing example-box">
                     <img class="washing-img" src="images/africa/clothes-washing-station.jpg" alt="clothes washing station">
+                    <h4>Clothes Washing</h4>
                     <p class="original3">This was a clothes-washing station in a rural village I visited—an open, shared </p>
                     <span class="dots3">...</span>
                     <p class="extra3">space where the entire community gathered to scrub and rinse their laundry by hand. Watching women and children work together, surrounded by buckets and worn washboards, was a powerful reminder of the simple luxuries we often overlook—like running water, washing machines, and private laundry rooms. The scene was a humbling contrast to the convenience we so easily take for granted.</p>
                     <input type="checkbox" id="btn3">
-                    <label for="btn3"></label>
+                    <label id="labelbtn" for="btn3"></label>
                 </div>
             </div>
         </main>
