--- a/travel/contact.html
+++ b/travel/contact.html
@@ -22,16 +22,16 @@
                 </div>
             </nav>
         </header>
-        <main class="contact">
+    <main class="contact">
             <!-- Add icon library -->
-
-            <div class="card">
-                <img src="images/profile.jpg" alt="profile" style="width:100%">
-                <h1>Brooke Noftle</h1>
-                <p class="title">Student and Traveller</p>
-                <p>Brigham Young University-Idaho</p>
+            <div class="info">
+                <div class="leftbox">
+                    <h1>Want to learn more about my travels?</h1>
+                    <h2>Reach out to me through email!</h2>
+                </div>
+                <p>brookenoftle@gmail.com</p>
             </div>
-        </main>
+    </main>
         <footer>
             <p>From Lost to Found &copy; 2025 - Brooke Noftle</p>
             <p><a href="euro-jap-travel.html">Beauty in Nature</a></p>
