--- a/travel/home-travel.html
+++ b/travel/home-travel.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>From Lost to Found</title>
+    <title>From Lost to Found | Home</title>
     <link rel="stylesheet" href="styles/travel.css">
 </head>
 <body>
